# docs

./: .gitignore  404.html  CNAME  README.md  docusaurus.config.ts  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sidebars.ts  sitemap.xml
.github/workflows/: publish.yml  test-deploy.yml
data-privacy/: index.html
docs/: cli.md  data-privacy.md  getting-started.md  index.md
docs/getting-started/: github.md  overview.md  quickstart.md  slack.md
docs/workflow/: cli.md  github-app.md  slack.md
getting-started/: index.html
search/: search_index.json
