[tool.poetry]
name = "docsy-docs"
version = "0.1.0"
description = ""
authors = ["Felix Zieger <mail@felixzieger.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.26"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-git-committers-plugin-2 = "^2.3.0"
material-plausible-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
